5 Aug 2014: Wouter
	- Fix #600: document that provide-xfr provides AXFR and not IXFR.
	- remove program group fix, because it is not needed.
	- Fix rising-load-average or memory-leaks in OSes (Linux since 2.6),
	  that keep track of all past process parents, or leak memory
	  for them.  Fix makes it so there is no very deep string of
	  process parents.
	  The reload process is now the process parent of servermain.  That
	  makes signals for children arrive at the reload, and servermain
	  has to use closed pipes to detect that children have exited.

1 Aug 2014: Wouter
	- Set program group on main process and its child processes, and
	  kill them on a reload.

20 July 2014: Wouter
	- Fix endian.h include for OpenBSD.

15 July 2014: Wouter
	- Fix -O3 compile flag to -O2 to avoid miscompilations.
	- Allow user to override the -g -O2 CFLAGS in ./configure.

11 July 2014: Wouter
	- fix strptime implicit declaration error on OpenBSD.

9 July 2014: Wouter
	- removed unnecessary arc4random_uniform.

8 July 2014: Matthijs
	- fake-rfc2553 patch (thanks Benjamin Baier).

8 July 2014: Wouter
	- wait and reap processes that are not part of the process group.

7 July 2014: Wouter
	- Code review fixup from NSD3.

30 Jun 2014: Wouter
	- Fix #590: rrl log does not print wildcard as a star but escaped.
	- Fix #591: rrl log messages at verbosity level 1.
	  (If that does not work for everyone, we need rrl-log: yesno option).

27 Jun 2014: Wouter
	- Fixup rr-test test so that it does not fail on the #553 string.

17 Jun 2014: Matthijs
	- Fix #587: Default value for statistics is 0.
	- Remove the shift-reduce conflicts from the bug#553 fix.

5 Jun 2014: Wouter
	- Fix roundrobin cornercase for truncated packets.
	- round-robin: yesno in nsd.conf enabled round robin rotation.

28 May 2014: Wouter
	- Fix #585: yylex_destroy missing, cannot compile on RHEL 5.x.
	- Fix #583: Round-robin for records in the Answer section.

22 May 2014: Wouter