@@ -159,6 +159,7 @@ struct	nsd
 	size_t            child_count;
 	struct nsd_child *children;
 	int	restart_children;
+	int	reload_failed;
 
 	/* NULL if this is the parent process. */
 	struct nsd_child *this_child;
